--- a/hippo.cabal
+++ b/hippo.cabal
@@ -19,6 +19,6 @@ executable hippo
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7, text, text-show, mtl, containers, MissingH
+  build-depends:       base >=4.6 && <4.7, text, text-show, mtl, containers, MissingH, aeson, bytestring
   -- hs-source-dirs:      
   default-language:    Haskell2010
